--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "dev8080": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "dist":"node build/dist.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
