--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
+    "better-scroll": "^0.4.0",
     "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
@@ -62,8 +65,7 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0",
-    "jsonp": "^0.2.1"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
