--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
-    "better-scroll": "^0.4.0",
+    "better-scroll": "^1.4.2",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0",
-    "vue-lazyload": "^1.1.3"
+    "vue-lazyload": "^1.1.3",
+    "vue-router": "^2.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
